# functions-cli

./: CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md
src/: main.rs
templates/: function.yaml.hbs
