[package]
name = "ibex"
version = "0.1.0"
description = "Eigr Functions CLI"
keywords = [
    "eigr",
    "serverless",
    "cloudstate",
    "event-sourcing",
    "crdt"
  ]
homepage = "https://eigr.io/"
documentation = "https://eigr.io/docs/overview/"
authors = ["Adriano Santos <sleipnir@bsd.com.br>", "Weslei Pereira <wesleimsr@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-toml-builder = "0.3.0"
clap               = { version = "3.0.4", features = ["derive", "wrap_help"] }
dirs               = "2.0"
handlebars         = "4.2.0"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0.41"
serde_yaml         = "0.8"
self_update        = "0.8.0"